syntax = "proto3";

package auth.user.password.authenticate.service;

import "auth/ticket/x_protobuf/service.proto";

service AuthenticateWithPasswordPb {
    rpc Authenticate (AuthenticateWithPasswordRequestPb) returns (AuthenticateWithPasswordResponsePb);
}
message AuthenticateWithPasswordRequestPb {
    string login_id = 1;
    string password = 2;
}
message AuthenticateWithPasswordResponsePb {
    bool success = 1;
    auth.ticket.service.AuthPermissionGrantedPb granted = 2;
    auth.ticket.service.AuthTokenPb token = 3;
}
message AuthenticateWithPasswordMaskedResponsePb {
    bool success = 1;
    auth.ticket.service.AuthPermissionGrantedPb granted = 2;
}
